--- a/src/style.css
+++ b/src/style.css
@@ -6,4 +6,11 @@
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
  var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
+.hide{
+  display: none;
+}
+.show{
+  display: block;
+}
+
 
